package edu.fiuba.algo3.modelo;

public class RangedType extends SectionType {
} 